setup-link | Initialized link theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name:  Setup Child
+	Theme Name:  Setup Link
 	Description: Starter child theme using Genesis Framework
 	Author:      Mark Corpuz
 	Author URI:  https://markcorpuz.com
