--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -554,7 +554,7 @@ template {
   display: none;
 }
 
-/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/layout.scss
+/* SETUP LINK | 1.0.0 | 210729 | assets/scss/partials/layout.scss
 ---------------------------------------------------------------------------------------------------- */
 /* Box Sizing
 --------------------------------------------- */
@@ -585,6 +585,9 @@ input[type=search] {
 }
 .archive .site-inner .wrap {
   max-width: 1280px;
+}
+.archive.links .site-inner .wrap {
+  max-width: 768px;
 }
 
 .content-sidebar .content-area .site-main, .sidebar-content .content-area .site-main {
@@ -1464,8 +1467,12 @@ div.wpforms-container.one-line:after {
   display: none;
 }
 
-/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/post-summary.scss
+/* SETUP-LINK | 1.0.0 | 210729 | assets/scss/partials/post-summary.scss
 ---------------------------------------------------------------------------------------------------- */
+.archive.links .module.post-summary {
+  text-align: center;
+}
+
 .module.post-summary .item.image {
   display: block;
   margin-bottom: 1rem;
@@ -2373,7 +2380,7 @@ h6.has-background {
   padding: 1em;
 }
 
-/* SETUP-BE | 1.0.0 | 210317 | setup-child/block/setup-child-100/list.scss
+/* SETUP-CHILD | 1.0.0 | 210605 | setup-child/block/setup-child-100/list.scss
 ---------------------------------------------------------------------------------------------------- */
 .entry-content ul, .entry-content ol {
   padding-left: 1.5rem;
@@ -2392,6 +2399,13 @@ h6.has-background {
 }
 .entry-content ul.wp-block-gallery li, .entry-content ol.wp-block-gallery li {
   padding-bottom: 0;
+}
+
+.editor-styles-wrapper ul ul,
+.editor-styles-wrapper ul ol,
+.editor-styles-wrapper ol ul,
+.editor-styles-wrapper ol ol {
+  margin-left: 1rem;
 }
 
 /*  SETUP-CHILD | 1.0.0 | 210224 | setup-child/selector/setup-child-100/textsize.scss
